examples/crd_derive_multi.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: conversion-webhook-example
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: conversion-webhook-example
  name: conversion-webhook
spec:
  selector:
    matchLabels:
      app: webhook
  replicas: 1
  template:
    metadata:
      labels:
        app: webhook
    spec:
      terminationGracePeriodSeconds: 1
      volumes:
      - name: tls
        secret:
          secretName: conversions-webhook-tls
      containers:
      - name: main
        image: # Specify image name here
        imagePullPolicy: Always
        volumeMounts:
        - name: tls
          mountPath: /pki
---
apiVersion: v1
kind: Service
metadata:
  namespace: conversion-webhook-example
  name: conversion-webhook
spec:
  selector:
    app: webhook
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 8443
